@@ -1,10 +1,9 @@
-
+import io.github.libfdx.gradle.LibfdxDesktopJvmTargetExtension
 import org.gradle.api.attributes.java.TargetJvmVersion
 import org.gradle.api.tasks.Delete
-import org.gradle.jvm.toolchain.JavaLanguageVersion
 
 plugins {
-    id("java")
+    id("io.github.libfdx")
 }
 
 java {
@@ -12,18 +11,17 @@ java {
     targetCompatibility = JavaVersion.toVersion(25)
 }
 
-
-val glRuntimeClasspath by configurations.creating {
+val glRuntimeClasspath = configurations.create("glRuntimeClasspath") {
     isCanBeConsumed = false
     isCanBeResolved = true
 }
 
-val vulkanRuntimeClasspath by configurations.creating {
+val vulkanRuntimeClasspath = configurations.create("vulkanRuntimeClasspath") {
     isCanBeConsumed = false
     isCanBeResolved = true
 }
 
-val wgpuRuntimeClasspath by configurations.creating {
+val wgpuRuntimeClasspath = configurations.create("wgpuRuntimeClasspath") {
     isCanBeConsumed = false
     isCanBeResolved = true
     attributes {
@@ -31,7 +29,7 @@ val wgpuRuntimeClasspath by configurations.creating {
     }
 }
 
-val runtimeFdxClasspath by configurations.creating {
+val runtimeFdxClasspath = configurations.create("runtimeFdxClasspath") {
     isCanBeConsumed = false
     isCanBeResolved = true
     attributes {
@@ -66,360 +64,192 @@ dependencies {
     }
 }
 
-fun registerGraphicsTestRun(
-    taskName: String,
-    descriptionText: String,
-    graphics: String,
-    graphicsLabel: String,
-    providerClasspath: FileCollection
-) = tasks.register<JavaExec>(taskName) {
-    group = "application"
-    description = descriptionText
-    classpath = sourceSets["main"].runtimeClasspath + providerClasspath
-    mainClass.set("io.github.libfdx.tests.desktop.DesktopTestLauncher")
-    systemProperty("libfdx.test.graphics", graphics)
-    systemProperty("libfdx.test.graphicsLabel", graphicsLabel)
+fun LibfdxDesktopJvmTargetExtension.graphics(name: String, label: String) {
+    systemProperty("libfdx.test.graphics", name)
+    systemProperty("libfdx.test.graphicsLabel", label)
+    launchProperty("graphics", name)
+    launchProperty("graphicsLabel", label)
 }
 
-val d3d12Run = registerGraphicsTestRun(
-    "test_desktop_d3d12_run",
-    "Runs graphics tests with Direct3D 12 through Java 25 FFM on Windows.",
-    "d3d12",
-    "Direct3D 12",
-    files()
-)
-val glRun = registerGraphicsTestRun(
-    "test_desktop_gl_run",
-    "Runs graphics tests with desktop GL.",
-    "gl",
-    "GL",
-    glRuntimeClasspath
-)
-val wgpuRun = registerGraphicsTestRun(
-    "test_desktop_wgpu_run",
-    "Runs graphics tests with WGPU.",
-    "wgpu",
-    "WGPU",
-    wgpuRuntimeClasspath
-)
-val wgpuCompute = registerGraphicsTestRun(
-    "test_desktop_wgpu_compute",
-    "Dispatches and verifies a handwritten compute shader through the common graphics API.",
-    "wgpu",
-    "WGPU",
-    wgpuRuntimeClasspath
-).apply {
-    configure {
-        group = "verification"
-        doFirst {
-            systemProperty("libfdx.test.name", "compute-buffer")
-            systemProperty("libfdx.test.frames", "4")
-            systemProperty("libfdx.test.visible", "false")
-            systemProperty("libfdx.test.width", "320")
-            systemProperty("libfdx.test.height", "240")
-            systemProperty("libfdx.test.maximized", "false")
-            systemProperty("libfdx.test.vsync", "false")
-        }
-    }
+fun LibfdxDesktopJvmTargetExtension.headless(
+    testName: String,
+    frames: Int,
+    width: Int,
+    height: Int,
+    capture: String? = null,
+    captureFrame: Int? = null
+) {
+    systemProperty("libfdx.test.name", testName)
+    systemProperty("libfdx.test.frames", frames.toString())
+    systemProperty("libfdx.test.visible", "false")
+    systemProperty("libfdx.test.width", width.toString())
+    systemProperty("libfdx.test.height", height.toString())
+    systemProperty("libfdx.test.maximized", "false")
+    systemProperty("libfdx.test.vsync", "false")
+    capture?.let { systemProperty("libfdx.test.capture", it) }
+    captureFrame?.let { systemProperty("libfdx.test.captureFrame", it.toString()) }
 }
-val wgpuRenderTargets = registerGraphicsTestRun(
-    "test_desktop_wgpu_render_targets",
-    "Validates MRT, resolves, explicit depth, multisampling, and pipeline compatibility through WGPU.",
-    "wgpu",
-    "WGPU",
-    wgpuRuntimeClasspath
-).apply {
-    configure {
-        group = "verification"
-        doFirst {
-            systemProperty("libfdx.test.name", "render-target-compatibility")
-            systemProperty("libfdx.test.frames", "3")
-            systemProperty("libfdx.test.visible", "false")
-            systemProperty("libfdx.test.width", "320")
-            systemProperty("libfdx.test.height", "240")
-            systemProperty("libfdx.test.maximized", "false")
-            systemProperty("libfdx.test.vsync", "false")
-        }
-    }
-}
-val wgpuShaderGraphProgram = registerGraphicsTestRun(
-    "test_desktop_wgpu_shader_graph_program",
-    "Compiles and renders a complete graph-owned vertex/fragment MRT program through ShaderProvider and WGPU.",
-    "wgpu",
-    "WGPU",
-    wgpuRuntimeClasspath
-).apply {
-    configure {
-        group = "verification"
-        doFirst {
-            systemProperty("libfdx.test.name", "shader-graph-program")
-            systemProperty("libfdx.test.frames", "3")
-            systemProperty("libfdx.test.visible", "false")
-            systemProperty("libfdx.test.width", "320")
-            systemProperty("libfdx.test.height", "240")
-            systemProperty("libfdx.test.maximized", "false")
-            systemProperty("libfdx.test.vsync", "false")
-        }
-    }
-}
-val wgpuShaderGraphTechnique = registerGraphicsTestRun(
-    "test_desktop_wgpu_shader_graph_technique",
-    "Runs a multi-pass graph technique with variants, fallback, bounded caches, and atomic replacement through WGPU.",
-    "wgpu",
-    "WGPU",
-    wgpuRuntimeClasspath
-).apply {
-    configure {
-        group = "verification"
-        doFirst {
-            systemProperty("libfdx.test.name", "shader-graph-technique")
-            systemProperty("libfdx.test.frames", "3")
-            systemProperty("libfdx.test.visible", "false")
-            systemProperty("libfdx.test.width", "320")
-            systemProperty("libfdx.test.height", "240")
-            systemProperty("libfdx.test.maximized", "false")
-            systemProperty("libfdx.test.vsync", "false")
-        }
-    }
-}
-val wgpuShaderGraphSprite = registerGraphicsTestRun(
-    "test_desktop_wgpu_shader_graph_sprite",
-    "Renders SpriteBatch through the common ShaderGraphProvider and every negotiated WGPU sprite ABI.",
-    "wgpu",
-    "WGPU",
-    wgpuRuntimeClasspath
-).apply {
-    configure {
-        group = "verification"
-        doFirst {
-            systemProperty("libfdx.test.name", "shader-graph-sprite")
-            systemProperty("libfdx.test.frames", "4")
-            systemProperty("libfdx.test.visible", "false")
-            systemProperty("libfdx.test.width", "640")
-            systemProperty("libfdx.test.height", "480")
-            systemProperty("libfdx.test.maximized", "false")
-            systemProperty("libfdx.test.vsync", "false")
-            systemProperty(
-                "libfdx.test.capture",
-                layout.buildDirectory.file(
-                    "captures/shader-graph-sprite.ppm"
-                ).get().asFile.absolutePath
-            )
-            systemProperty("libfdx.test.captureFrame", "2")
-        }
-    }
-}
-val wgpuShaderGraphModel = registerGraphicsTestRun(
-    "test_desktop_wgpu_shader_graph_model",
-    "Renders static ModelBatch PBR through the common ShaderGraphProvider.",
-    "wgpu",
-    "WGPU",
-    wgpuRuntimeClasspath
-).apply {
-    configure {
-        group = "verification"
-        doFirst {
-            systemProperty("libfdx.test.name", "model")
-            systemProperty("libfdx.test.shaderGraphPbr", "true")
-            systemProperty("libfdx.test.frames", "32")
-            systemProperty("libfdx.test.visible", "false")
-            systemProperty("libfdx.test.width", "640")
-            systemProperty("libfdx.test.height", "480")
-            systemProperty("libfdx.test.maximized", "false")
-            systemProperty("libfdx.test.vsync", "false")
-            systemProperty(
-                "libfdx.test.capture",
-                layout.buildDirectory.file(
-                    "captures/shader-graph-model.ppm"
-                ).get().asFile.absolutePath
-            )
-        }
-    }
-}
-val wgpuShaderGraphSkinnedModel = registerGraphicsTestRun(
-    "test_desktop_wgpu_shader_graph_skinned_model",
-    "Renders skinned ModelBatch PBR through the common ShaderGraphProvider.",
-    "wgpu",
-    "WGPU",
-    wgpuRuntimeClasspath
-).apply {
-    configure {
-        group = "verification"
-        doFirst {
-            systemProperty("libfdx.test.name", "model-skinning")
-            systemProperty("libfdx.test.shaderGraphPbr", "true")
-            systemProperty("libfdx.test.frames", "46")
-            systemProperty("libfdx.test.captureFrame", "44")
-            systemProperty("libfdx.test.visible", "false")
-            systemProperty("libfdx.test.width", "640")
-            systemProperty("libfdx.test.height", "480")
-            systemProperty("libfdx.test.maximized", "false")
-            systemProperty("libfdx.test.vsync", "false")
-            systemProperty(
-                "libfdx.test.capture",
-                layout.buildDirectory.file(
-                    "captures/shader-graph-model-skinned.ppm"
-                ).get().asFile.absolutePath
-            )
-        }
-    }
-}
-val wgpuShaderGraphCompute = registerGraphicsTestRun(
-    "test_desktop_wgpu_shader_graph_compute",
-    "Dispatches graph-generated buffer, workgroup, atomic, storage-texture, and compute-to-render programs through WGPU.",
-    "wgpu",
-    "WGPU",
-    wgpuRuntimeClasspath
-).apply {
-    configure {
-        group = "verification"
-        doFirst {
-            systemProperty("libfdx.test.name", "shader-graph-compute")
-            systemProperty("libfdx.test.frames", "4")
-            systemProperty("libfdx.test.visible", "false")
-            systemProperty("libfdx.test.width", "320")
-            systemProperty("libfdx.test.height", "240")
-            systemProperty("libfdx.test.maximized", "false")
-            systemProperty("libfdx.test.vsync", "false")
-            systemProperty(
-                "libfdx.test.capture",
-                layout.buildDirectory.file(
-                    "captures/shader-graph-compute.ppm"
-                ).get().asFile.absolutePath
-            )
-            systemProperty("libfdx.test.captureFrame", "2")
-        }
-    }
-}
-val wgpuUiCustomSurface = registerGraphicsTestRun(
-    "test_desktop_wgpu_ui_custom_surface",
-    "Renders and captures UI Kit custom surfaces, clipping, lines, and retained paths through WGPU.",
-    "wgpu",
-    "WGPU",
-    wgpuRuntimeClasspath
-).apply {
-    configure {
-        group = "verification"
-        doFirst {
-            systemProperty("libfdx.test.name", "ui-custom-surface")
-            systemProperty("libfdx.test.frames", "4")
-            systemProperty("libfdx.test.visible", "false")
-            systemProperty("libfdx.test.width", "960")
-            systemProperty("libfdx.test.height", "600")
-            systemProperty("libfdx.test.maximized", "false")
-            systemProperty("libfdx.test.vsync", "false")
-            systemProperty(
-                "libfdx.test.capture",
-                layout.buildDirectory.file(
-                    "captures/ui-custom-surface.ppm"
-                ).get().asFile.absolutePath
-            )
-            systemProperty("libfdx.test.captureFrame", "2")
-        }
-    }
-}
-val wgpuShaderGraphEditor = registerGraphicsTestRun(
-    "test_desktop_wgpu_shader_graph_editor",
-    "Renders and captures the complete optional Shader Graph UI Kit editor through WGPU.",
-    "wgpu",
-    "WGPU",
-    wgpuRuntimeClasspath
-).apply {
-    configure {
-        group = "verification"
-        doFirst {
-            systemProperty("libfdx.test.name", "shader-graph-editor")
-            systemProperty("libfdx.test.frames", "4")
-            systemProperty("libfdx.test.visible", "false")
-            systemProperty("libfdx.test.width", "1440")
-            systemProperty("libfdx.test.height", "900")
-            systemProperty("libfdx.test.maximized", "false")
-            systemProperty("libfdx.test.vsync", "false")
-            systemProperty(
-                "libfdx.test.capture",
-                layout.buildDirectory.file(
-                    "captures/shader-graph-editor.ppm"
-                ).get().asFile.absolutePath
-            )
-            systemProperty("libfdx.test.captureFrame", "2")
-        }
-    }
-}
-val vulkanRun = registerGraphicsTestRun(
-    "test_desktop_vulkan_run",
-    "Runs graphics tests with desktop Vulkan.",
-    "vulkan",
-    "Vulkan",
-    vulkanRuntimeClasspath
-)
 
+val shaderGraphSpriteCapture =
+    layout.buildDirectory.file("captures/shader-graph-sprite.ppm").get().asFile.absolutePath
+val shaderGraphModelCapture =
+    layout.buildDirectory.file("captures/shader-graph-model.ppm").get().asFile.absolutePath
+val shaderGraphSkinnedModelCapture =
+    layout.buildDirectory.file("captures/shader-graph-model-skinned.ppm").get().asFile.absolutePath
+val shaderGraphComputeCapture =
+    layout.buildDirectory.file("captures/shader-graph-compute.ppm").get().asFile.absolutePath
+val uiCustomSurfaceCapture =
+    layout.buildDirectory.file("captures/ui-custom-surface.ppm").get().asFile.absolutePath
+val shaderGraphEditorCapture =
+    layout.buildDirectory.file("captures/shader-graph-editor.ppm").get().asFile.absolutePath
 val d3d12PbrStaticCapture =
-    layout.buildDirectory.file("reports/shader-phase0/d3d12-smoke/static.ppm")
+    layout.buildDirectory.file("reports/shader-phase0/d3d12-smoke/static.ppm").get().asFile.absolutePath
 val d3d12PbrSkinnedCapture =
-    layout.buildDirectory.file("reports/shader-phase0/d3d12-smoke/skinned.ppm")
+    layout.buildDirectory.file("reports/shader-phase0/d3d12-smoke/skinned.ppm").get().asFile.absolutePath
 val isWindowsHost = System.getProperty("os.name").lowercase().contains("windows")
 
-val d3d12PbrStaticCompile = registerGraphicsTestRun(
-    "test_desktop_d3d12_pbr_static_compile",
-    "Compiles and renders the static PBR shader through native D3D12 FXC.",
-    "d3d12",
-    "Direct3D 12",
-    files()
-).apply {
-    configure {
-        group = "verification"
-        onlyIf("Native D3D12 FXC is available only on Windows") { isWindowsHost }
-        doFirst {
-            systemProperty("libfdx.test.name", "model")
-            systemProperty("libfdx.test.frames", "32")
-            systemProperty("libfdx.test.capture", d3d12PbrStaticCapture.get().asFile.absolutePath)
-            systemProperty("libfdx.test.visible", "false")
-            systemProperty("libfdx.test.width", "640")
-            systemProperty("libfdx.test.height", "480")
-            systemProperty("libfdx.test.maximized", "false")
-            systemProperty("libfdx.test.vsync", "false")
+libfdx {
+    assets(rootProject.layout.projectDirectory.dir("tests/assets"))
+
+    desktopJvm {
+        mainClass.set("io.github.libfdx.tests.desktop.DesktopTestLauncher")
+        workingDir.set(rootProject.layout.projectDirectory)
+        minHeapSize.set("64m")
+        maxHeapSize.set("1g")
+        forwardSystemPropertyPrefix("libfdx.test.")
+        forwardSystemPropertyPrefix("libfdx.validation.")
+
+        target("d3d12") {
+            displayName.set("Direct3D 12 graphics tests")
+            graphics("d3d12", "Direct3D 12")
+            runDescription.set("Runs graphics tests with Direct3D 12 through Java 25 FFM on Windows.")
+        }
+        target("gl") {
+            displayName.set("GL graphics tests")
+            runtimeClasspath(glRuntimeClasspath)
+            graphics("gl", "GL")
+            runDescription.set("Runs graphics tests with desktop GL.")
+        }
+        target("wgpu") {
+            displayName.set("WGPU graphics tests")
+            runtimeClasspath(wgpuRuntimeClasspath)
+            graphics("wgpu", "WGPU")
+            runDescription.set("Runs graphics tests with WGPU.")
+        }
+        target("wgpu_compute") {
+            displayName.set("WGPU handwritten compute test")
+            runtimeClasspath(wgpuRuntimeClasspath)
+            graphics("wgpu", "WGPU")
+            headless("compute-buffer", 4, 320, 240)
+            runDescription.set(
+                "Dispatches and verifies a handwritten compute shader through the common graphics API."
+            )
+        }
+        target("wgpu_render_targets") {
+            displayName.set("WGPU render-target compatibility test")
+            runtimeClasspath(wgpuRuntimeClasspath)
+            graphics("wgpu", "WGPU")
+            headless("render-target-compatibility", 3, 320, 240)
+            runDescription.set(
+                "Validates MRT, resolves, explicit depth, multisampling, and pipeline compatibility through WGPU."
+            )
+        }
+        target("wgpu_shader_graph_program") {
+            displayName.set("WGPU shader-graph program test")
+            runtimeClasspath(wgpuRuntimeClasspath)
+            graphics("wgpu", "WGPU")
+            headless("shader-graph-program", 3, 320, 240)
+            runDescription.set(
+                "Compiles and renders a graph-owned vertex/fragment MRT program through ShaderProvider and WGPU."
+            )
+        }
+        target("wgpu_shader_graph_technique") {
+            displayName.set("WGPU shader-graph technique test")
+            runtimeClasspath(wgpuRuntimeClasspath)
+            graphics("wgpu", "WGPU")
+            headless("shader-graph-technique", 3, 320, 240)
+            runDescription.set(
+                "Runs a multi-pass graph technique with variants, fallback, bounded caches, and atomic replacement."
+            )
+        }
+        target("wgpu_shader_graph_sprite") {
+            displayName.set("WGPU shader-graph sprite test")
+            runtimeClasspath(wgpuRuntimeClasspath)
+            graphics("wgpu", "WGPU")
+            headless("shader-graph-sprite", 4, 640, 480, shaderGraphSpriteCapture, 2)
+            runDescription.set(
+                "Renders SpriteBatch through ShaderGraphProvider and every negotiated WGPU sprite ABI."
+            )
+        }
+        target("wgpu_shader_graph_model") {
+            displayName.set("WGPU shader-graph model test")
+            runtimeClasspath(wgpuRuntimeClasspath)
+            graphics("wgpu", "WGPU")
+            headless("model", 32, 640, 480, shaderGraphModelCapture)
+            systemProperty("libfdx.test.shaderGraphPbr", "true")
+            runDescription.set("Renders static ModelBatch PBR through the common ShaderGraphProvider.")
+        }
+        target("wgpu_shader_graph_skinned_model") {
+            displayName.set("WGPU shader-graph skinned-model test")
+            runtimeClasspath(wgpuRuntimeClasspath)
+            graphics("wgpu", "WGPU")
+            headless("model-skinning", 46, 640, 480, shaderGraphSkinnedModelCapture, 44)
+            systemProperty("libfdx.test.shaderGraphPbr", "true")
+            runDescription.set("Renders skinned ModelBatch PBR through the common ShaderGraphProvider.")
+        }
+        target("wgpu_shader_graph_compute") {
+            displayName.set("WGPU shader-graph compute test")
+            runtimeClasspath(wgpuRuntimeClasspath)
+            graphics("wgpu", "WGPU")
+            headless("shader-graph-compute", 4, 320, 240, shaderGraphComputeCapture, 2)
+            runDescription.set(
+                "Dispatches graph-generated compute and compute-to-render programs through WGPU."
+            )
+        }
+        target("wgpu_ui_custom_surface") {
+            displayName.set("WGPU UI custom-surface test")
+            runtimeClasspath(wgpuRuntimeClasspath)
+            graphics("wgpu", "WGPU")
+            headless("ui-custom-surface", 4, 960, 600, uiCustomSurfaceCapture, 2)
+            runDescription.set(
+                "Renders and captures UI Kit custom surfaces, clipping, lines, and retained paths through WGPU."
+            )
+        }
+        target("wgpu_shader_graph_editor") {
+            displayName.set("WGPU shader-graph editor test")
+            runtimeClasspath(wgpuRuntimeClasspath)
+            graphics("wgpu", "WGPU")
+            headless("shader-graph-editor", 4, 1440, 900, shaderGraphEditorCapture, 2)
+            runDescription.set(
+                "Renders and captures the optional Shader Graph UI Kit editor through WGPU."
+            )
+        }
+        target("vulkan") {
+            displayName.set("Vulkan graphics tests")
+            runtimeClasspath(vulkanRuntimeClasspath)
+            graphics("vulkan", "Vulkan")
+            runDescription.set("Runs graphics tests with desktop Vulkan.")
+        }
+        target("d3d12_pbr_static_compile") {
+            displayName.set("Direct3D 12 static PBR compile test")
+            graphics("d3d12", "Direct3D 12")
+            headless("model", 32, 640, 480, d3d12PbrStaticCapture)
+            runDescription.set("Compiles and renders the static PBR shader through native D3D12 FXC.")
+        }
+        target("d3d12_pbr_skinned_compile") {
+            displayName.set("Direct3D 12 skinned PBR compile test")
+            graphics("d3d12", "Direct3D 12")
+            headless("model-skinning", 46, 640, 480, d3d12PbrSkinnedCapture, 44)
+            runDescription.set("Compiles and renders the skinned PBR shader through native D3D12 FXC.")
+        }
+        target("math_acceleration") {
+            displayName.set("desktop runtime FDX SIMD math acceleration test")
+            mainClass.set("io.github.libfdx.backend.desktop.DesktopMathAccelerationCheck")
+            runtimeClasspath(runtimeFdxClasspath)
+            systemProperty("libfdx.math.requireNative", "true")
+            runDescription.set("Validates desktop runtime FDX SIMD math acceleration against scalar math.")
         }
     }
-}
-
-val d3d12PbrSkinnedCompile = registerGraphicsTestRun(
-    "test_desktop_d3d12_pbr_skinned_compile",
-    "Compiles and renders the skinned PBR shader through native D3D12 FXC.",
-    "d3d12",
-    "Direct3D 12",
-    files()
-).apply {
-    configure {
-        group = "verification"
-        onlyIf("Native D3D12 FXC is available only on Windows") { isWindowsHost }
-        mustRunAfter(d3d12PbrStaticCompile)
-        doFirst {
-            systemProperty("libfdx.test.name", "model-skinning")
-            systemProperty("libfdx.test.frames", "46")
-            systemProperty("libfdx.test.captureFrame", "44")
-            systemProperty("libfdx.test.capture", d3d12PbrSkinnedCapture.get().asFile.absolutePath)
-            systemProperty("libfdx.test.visible", "false")
-            systemProperty("libfdx.test.width", "640")
-            systemProperty("libfdx.test.height", "480")
-            systemProperty("libfdx.test.maximized", "false")
-            systemProperty("libfdx.test.vsync", "false")
-        }
-    }
-}
-
-tasks.register("test_desktop_d3d12_pbr_compile") {
-    group = "verification"
-    description = "Verifies static and skinned PBR shaders through native D3D12 FXC vs_5_1/ps_5_1."
-    onlyIf("Native D3D12 FXC is available only on Windows") { isWindowsHost }
-    dependsOn(d3d12PbrStaticCompile, d3d12PbrSkinnedCompile)
-}
-
-tasks.register<JavaExec>("test_math_acceleration_desktop") {
-    group = "application_test"
-    description = "Validates desktop runtime fdx SIMD math acceleration against scalar math."
-    classpath = sourceSets["main"].output + sourceSets["main"].compileClasspath + runtimeFdxClasspath
-    mainClass.set("io.github.libfdx.backend.desktop.DesktopMathAccelerationCheck")
-    systemProperty("libfdx.math.requireNative", "true")
 }
 
 val cleanTestRuntimeStorage = tasks.register<Delete>("clean_test_runtime_storage") {
@@ -437,39 +267,15 @@ val cleanTestRuntimeStorage = tasks.register<Delete>("clean_test_runtime_storage
     }
 }
 
-listOf(
-    d3d12Run,
-    glRun,
-    wgpuRun,
-    wgpuCompute,
-    wgpuRenderTargets,
-    wgpuShaderGraphProgram,
-    wgpuShaderGraphTechnique,
-    wgpuShaderGraphSprite,
-    wgpuShaderGraphModel,
-    wgpuShaderGraphSkinnedModel,
-    wgpuShaderGraphCompute,
-    vulkanRun,
-    d3d12PbrStaticCompile,
-    d3d12PbrSkinnedCompile
-).forEach { runTask ->
-    runTask.configure { finalizedBy(cleanTestRuntimeStorage) }
-}
-
-tasks.withType<JavaExec>().configureEach {
-    workingDir = rootProject.projectDir
-    minHeapSize = "64m"
-    maxHeapSize = "1g"
-    javaLauncher.set(javaToolchains.launcherFor {
-        languageVersion.set(JavaLanguageVersion.of(25))
-    })
-    jvmArgs("-Dorg.lwjgl.system.stackSize=1024", "--enable-native-access=ALL-UNNAMED")
-    gradle.startParameter.systemPropertiesArgs
-            .filterKeys {
-                (it.startsWith("libfdx.test.") || it.startsWith("libfdx.validation."))
-                        && it != "libfdx.test.graphics"
-                        && it != "libfdx.test.graphicsLabel"
-            }
-            .filterValues { it.isNotBlank() }
-            .forEach { (name, value) -> systemProperty(name, value) }
+tasks.configureEach {
+    if (name.startsWith("libfdx_desktop_jvm_") && name.endsWith("_run")) {
+        finalizedBy(cleanTestRuntimeStorage)
+    }
+    if (name == "libfdx_desktop_jvm_d3d12_pbr_static_compile_run"
+        || name == "libfdx_desktop_jvm_d3d12_pbr_skinned_compile_run") {
+        onlyIf("Native D3D12 FXC is available only on Windows") { isWindowsHost }
+    }
+    if (name == "libfdx_desktop_jvm_d3d12_pbr_skinned_compile_run") {
+        mustRunAfter("libfdx_desktop_jvm_d3d12_pbr_static_compile_run")
+    }
 }
